# OS-Simulator

./: .gitignore  README.md
backend/: CMakeLists.txt
backend/include/: CSVUtils.h  FCFSScheduler.h  HRRNScheduler.h  MLQScheduler.h  PreemptivePriorityScheduler.h  PriorityScheduler.h  Process.h  RRScheduler.h  SJFScheduler.h  SRTFScheduler.h  Scheduler.h
backend/src/: main.cpp  server.cpp
backend/src/algorithms/: FCFSScheduler.cpp  HRRNScheduler.cpp  MLQScheduler.cpp  PreemptivePriorityScheduler.cpp  PriorityScheduler.cpp  RRScheduler.cpp  SJFScheduler.cpp  SRTFScheduler.cpp
backend/src/core/: Process.cpp  Scheduler.cpp
backend/src/utils/: CSVUtils.cpp
backend/tests/: test_csv.cpp  test_fcfs.cpp  test_hrrn.cpp  test_mlq.cpp  test_preemptive_priority.cpp  test_priority.cpp  test_rr.cpp  test_sjf.cpp  test_srtf.cpp
docs/: interview_prep.md
frontend/: package-lock.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/schedule/: route.ts
frontend/src/components/: GanttChart.tsx  ProcessInput.tsx  StatisticsPanel.tsx
frontend/src/types/: index.ts
